tests/negative/runtime/imported_array_oob/input.ci
import "bad.ci";
void main(string[] args) {
    trigger();
}
